export const snapshot = {};

snapshot[`nav plugin 1`] = `
{
  formats: [
    {
      engines: 0,
      ext: ".page.toml",
      isPage: true,
      loader: [AsyncFunction: toml],
    },
    {
      engines: 1,
      ext: ".page.ts",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".page.js",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 0,
      ext: ".page.jsonc",
      isPage: true,
      loader: [AsyncFunction: json],
    },
    {
      engines: 0,
      ext: ".page.json",
      isPage: true,
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".json",
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".jsonc",
      loader: [AsyncFunction: json],
    },
    {
      engines: 1,
      ext: ".md",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".markdown",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
      loader: [AsyncFunction: module],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".vento",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".vto",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: toml],
      engines: 0,
      ext: ".toml",
      loader: [AsyncFunction: toml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yaml",
      isPage: true,
      loader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yml",
      isPage: true,
      loader: [AsyncFunction: yaml],
    },
  ],
  src: [
    "/",
    "/_data.yml",
    "/_includes",
    "/_includes/main.vto",
    "/_includes/step.vto",
    "/docs",
    "/docs.md",
    "/docs/0-pages",
    "/docs/0-pages/1-first.md",
    "/docs/0-pages/2-second.md",
    "/docs/0-pages/3-pages",
    "/docs/0-pages/3-pages.md",
    "/docs/0-pages/3-pages/1.first.md",
    "/docs/0-pages/3-pages/2.second.md",
    "/docs/0-pages/4-pages",
    "/docs/0-pages/4-pages/1-pages",
    "/docs/0-pages/4-pages/1-pages/1-first.md",
    "/docs/0-pages/index.md",
    "/docs/1-about-docs.md",
    "/index.vto",
  ],
}
`;

snapshot[`nav plugin 2`] = `[]`;

snapshot[`nav plugin 3`] = `
[
  {
    content: '<html>
  <head>
    <title></title>
  </head>

  <body>
      <a href="/docs/0-pages/">Previous 0-pages</a>
      <a href="/docs/0-pages/2-second/">Next 2-second</a>
    <hr>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        <li><a href="/"></a></li>
        <li><a href="/docs/">docs</a></li>
        <li><a href="/docs/0-pages/">0-pages</a></li>
        <li><a href="/docs/0-pages/1-first/">1-first</a></li>
      </ul>
    </nav>

    <h1>1-first</h1>

    <nav>
      <ul>        <li>
          <a href="/docs/">
  docs
</a>

<ul>
  <li>
    <a href="/docs/0-pages/">
  0-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/1-first/">
  1-first
    (current)
</a>


  </li>
  <li>
    <a href="/docs/0-pages/2-second/">
  2-second
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/">
  3-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/3-pages/1.first/">
  1.first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/2.second/">
  2.second
</a>


  </li>
</ul>

  </li>
  <li>
    <strong>4-pages</strong>

<ul>
  <li>
    <strong>1-pages</strong>

<ul>
  <li>
    <a href="/docs/0-pages/4-pages/1-pages/1-first/">
  1-first
</a>


  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

  </li>
  <li>
    <a href="/docs/1-about-docs/">
  1-about-docs
</a>


  </li>
</ul>

        </li>      </ul>
    </nav>
  </body>
</html>',
    data: {
      basename: "1-first",
      children: "",
      content: "",
      date: [],
      layout: "main.vto",
      mergedKeys: [
        "tags",
      ],
      nav: [],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/docs/0-pages/1-first/",
    },
    src: {
      ext: ".md",
      path: "/docs/0-pages/1-first",
      remote: undefined,
    },
  },
  {
    content: '<html>
  <head>
    <title></title>
  </head>

  <body>
      <a href="/docs/0-pages/1-first/">Previous 1-first</a>
      <a href="/docs/0-pages/3-pages/">Next 3-pages</a>
    <hr>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        <li><a href="/"></a></li>
        <li><a href="/docs/">docs</a></li>
        <li><a href="/docs/0-pages/">0-pages</a></li>
        <li><a href="/docs/0-pages/2-second/">2-second</a></li>
      </ul>
    </nav>

    <h1>2-second</h1>

    <nav>
      <ul>        <li>
          <a href="/docs/">
  docs
</a>

<ul>
  <li>
    <a href="/docs/0-pages/">
  0-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/1-first/">
  1-first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/2-second/">
  2-second
    (current)
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/">
  3-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/3-pages/1.first/">
  1.first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/2.second/">
  2.second
</a>


  </li>
</ul>

  </li>
  <li>
    <strong>4-pages</strong>

<ul>
  <li>
    <strong>1-pages</strong>

<ul>
  <li>
    <a href="/docs/0-pages/4-pages/1-pages/1-first/">
  1-first
</a>


  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

  </li>
  <li>
    <a href="/docs/1-about-docs/">
  1-about-docs
</a>


  </li>
</ul>

        </li>      </ul>
    </nav>
  </body>
</html>',
    data: {
      basename: "2-second",
      children: "",
      content: "",
      date: [],
      layout: "main.vto",
      mergedKeys: [
        "tags",
      ],
      nav: [],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/docs/0-pages/2-second/",
    },
    src: {
      ext: ".md",
      path: "/docs/0-pages/2-second",
      remote: undefined,
    },
  },
  {
    content: '<html>
  <head>
    <title></title>
  </head>

  <body>
      <a href="/docs/0-pages/3-pages/">Previous 3-pages</a>
      <a href="/docs/0-pages/3-pages/2.second/">Next 2.second</a>
    <hr>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        <li><a href="/"></a></li>
        <li><a href="/docs/">docs</a></li>
        <li><a href="/docs/0-pages/">0-pages</a></li>
        <li><a href="/docs/0-pages/3-pages/">3-pages</a></li>
        <li><a href="/docs/0-pages/3-pages/1.first/">1.first</a></li>
      </ul>
    </nav>

    <h1>1.first</h1>

    <nav>
      <ul>        <li>
          <a href="/docs/">
  docs
</a>

<ul>
  <li>
    <a href="/docs/0-pages/">
  0-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/1-first/">
  1-first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/2-second/">
  2-second
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/">
  3-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/3-pages/1.first/">
  1.first
    (current)
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/2.second/">
  2.second
</a>


  </li>
</ul>

  </li>
  <li>
    <strong>4-pages</strong>

<ul>
  <li>
    <strong>1-pages</strong>

<ul>
  <li>
    <a href="/docs/0-pages/4-pages/1-pages/1-first/">
  1-first
</a>


  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

  </li>
  <li>
    <a href="/docs/1-about-docs/">
  1-about-docs
</a>


  </li>
</ul>

        </li>      </ul>
    </nav>
  </body>
</html>',
    data: {
      basename: "1.first",
      children: "",
      content: "",
      date: [],
      layout: "main.vto",
      mergedKeys: [
        "tags",
      ],
      nav: [],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/docs/0-pages/3-pages/1.first/",
    },
    src: {
      ext: ".md",
      path: "/docs/0-pages/3-pages/1.first",
      remote: undefined,
    },
  },
  {
    content: '<html>
  <head>
    <title></title>
  </head>

  <body>
      <a href="/docs/0-pages/3-pages/1.first/">Previous 1.first</a>
      <a href="/docs/0-pages/4-pages/1-pages/1-first/">Next 1-first</a>
    <hr>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        <li><a href="/"></a></li>
        <li><a href="/docs/">docs</a></li>
        <li><a href="/docs/0-pages/">0-pages</a></li>
        <li><a href="/docs/0-pages/3-pages/">3-pages</a></li>
        <li><a href="/docs/0-pages/3-pages/2.second/">2.second</a></li>
      </ul>
    </nav>

    <h1>2.second</h1>

    <nav>
      <ul>        <li>
          <a href="/docs/">
  docs
</a>

<ul>
  <li>
    <a href="/docs/0-pages/">
  0-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/1-first/">
  1-first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/2-second/">
  2-second
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/">
  3-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/3-pages/1.first/">
  1.first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/2.second/">
  2.second
    (current)
</a>


  </li>
</ul>

  </li>
  <li>
    <strong>4-pages</strong>

<ul>
  <li>
    <strong>1-pages</strong>

<ul>
  <li>
    <a href="/docs/0-pages/4-pages/1-pages/1-first/">
  1-first
</a>


  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

  </li>
  <li>
    <a href="/docs/1-about-docs/">
  1-about-docs
</a>


  </li>
</ul>

        </li>      </ul>
    </nav>
  </body>
</html>',
    data: {
      basename: "2.second",
      children: "",
      content: "",
      date: [],
      layout: "main.vto",
      mergedKeys: [
        "tags",
      ],
      nav: [],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/docs/0-pages/3-pages/2.second/",
    },
    src: {
      ext: ".md",
      path: "/docs/0-pages/3-pages/2.second",
      remote: undefined,
    },
  },
  {
    content: '<html>
  <head>
    <title></title>
  </head>

  <body>
      <a href="/docs/0-pages/2-second/">Previous 2-second</a>
      <a href="/docs/0-pages/3-pages/1.first/">Next 1.first</a>
    <hr>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        <li><a href="/"></a></li>
        <li><a href="/docs/">docs</a></li>
        <li><a href="/docs/0-pages/">0-pages</a></li>
        <li><a href="/docs/0-pages/3-pages/">3-pages</a></li>
      </ul>
    </nav>

    <h1>3-pages</h1>

    <nav>
      <ul>        <li>
          <a href="/docs/">
  docs
</a>

<ul>
  <li>
    <a href="/docs/0-pages/">
  0-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/1-first/">
  1-first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/2-second/">
  2-second
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/">
  3-pages
    (current)
</a>

<ul>
  <li>
    <a href="/docs/0-pages/3-pages/1.first/">
  1.first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/2.second/">
  2.second
</a>


  </li>
</ul>

  </li>
  <li>
    <strong>4-pages</strong>

<ul>
  <li>
    <strong>1-pages</strong>

<ul>
  <li>
    <a href="/docs/0-pages/4-pages/1-pages/1-first/">
  1-first
</a>


  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

  </li>
  <li>
    <a href="/docs/1-about-docs/">
  1-about-docs
</a>


  </li>
</ul>

        </li>      </ul>
    </nav>
  </body>
</html>',
    data: {
      basename: "3-pages",
      children: "",
      content: "",
      date: [],
      layout: "main.vto",
      mergedKeys: [
        "tags",
      ],
      nav: [],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/docs/0-pages/3-pages/",
    },
    src: {
      ext: ".md",
      path: "/docs/0-pages/3-pages",
      remote: undefined,
    },
  },
  {
    content: '<html>
  <head>
    <title></title>
  </head>

  <body>
      <a href="/docs/0-pages/3-pages/2.second/">Previous 2.second</a>
      <a href="/docs/1-about-docs/">Next 1-about-docs</a>
    <hr>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        <li><a href="/"></a></li>
        <li><a href="/docs/">docs</a></li>
        <li><a href="/docs/0-pages/">0-pages</a></li>
        <li><a href="">4-pages</a></li>
        <li><a href="">1-pages</a></li>
        <li><a href="/docs/0-pages/4-pages/1-pages/1-first/">1-first</a></li>
      </ul>
    </nav>

    <h1>1-first</h1>

    <nav>
      <ul>        <li>
          <a href="/docs/">
  docs
</a>

<ul>
  <li>
    <a href="/docs/0-pages/">
  0-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/1-first/">
  1-first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/2-second/">
  2-second
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/">
  3-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/3-pages/1.first/">
  1.first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/2.second/">
  2.second
</a>


  </li>
</ul>

  </li>
  <li>
    <strong>4-pages</strong>

<ul>
  <li>
    <strong>1-pages</strong>

<ul>
  <li>
    <a href="/docs/0-pages/4-pages/1-pages/1-first/">
  1-first
    (current)
</a>


  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

  </li>
  <li>
    <a href="/docs/1-about-docs/">
  1-about-docs
</a>


  </li>
</ul>

        </li>      </ul>
    </nav>
  </body>
</html>',
    data: {
      basename: "1-first",
      children: "",
      content: "",
      date: [],
      layout: "main.vto",
      mergedKeys: [
        "tags",
      ],
      nav: [],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/docs/0-pages/4-pages/1-pages/1-first/",
    },
    src: {
      ext: ".md",
      path: "/docs/0-pages/4-pages/1-pages/1-first",
      remote: undefined,
    },
  },
  {
    content: '<html>
  <head>
    <title></title>
  </head>

  <body>
      <a href="/docs/">Previous docs</a>
      <a href="/docs/0-pages/1-first/">Next 1-first</a>
    <hr>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        <li><a href="/"></a></li>
        <li><a href="/docs/">docs</a></li>
        <li><a href="/docs/0-pages/">0-pages</a></li>
      </ul>
    </nav>

    <h1>0-pages</h1>

    <nav>
      <ul>        <li>
          <a href="/docs/">
  docs
</a>

<ul>
  <li>
    <a href="/docs/0-pages/">
  0-pages
    (current)
</a>

<ul>
  <li>
    <a href="/docs/0-pages/1-first/">
  1-first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/2-second/">
  2-second
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/">
  3-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/3-pages/1.first/">
  1.first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/2.second/">
  2.second
</a>


  </li>
</ul>

  </li>
  <li>
    <strong>4-pages</strong>

<ul>
  <li>
    <strong>1-pages</strong>

<ul>
  <li>
    <a href="/docs/0-pages/4-pages/1-pages/1-first/">
  1-first
</a>


  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

  </li>
  <li>
    <a href="/docs/1-about-docs/">
  1-about-docs
</a>


  </li>
</ul>

        </li>      </ul>
    </nav>
  </body>
</html>',
    data: {
      basename: "0-pages",
      children: "",
      content: "",
      date: [],
      layout: "main.vto",
      mergedKeys: [
        "tags",
      ],
      nav: [],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/docs/0-pages/",
    },
    src: {
      ext: ".md",
      path: "/docs/0-pages/index",
      remote: undefined,
    },
  },
  {
    content: '<html>
  <head>
    <title></title>
  </head>

  <body>
      <a href="/docs/0-pages/4-pages/1-pages/1-first/">Previous 1-first</a>
    <hr>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        <li><a href="/"></a></li>
        <li><a href="/docs/">docs</a></li>
        <li><a href="/docs/1-about-docs/">1-about-docs</a></li>
      </ul>
    </nav>

    <h1>1-about-docs</h1>

    <nav>
      <ul>        <li>
          <a href="/docs/">
  docs
</a>

<ul>
  <li>
    <a href="/docs/0-pages/">
  0-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/1-first/">
  1-first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/2-second/">
  2-second
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/">
  3-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/3-pages/1.first/">
  1.first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/2.second/">
  2.second
</a>


  </li>
</ul>

  </li>
  <li>
    <strong>4-pages</strong>

<ul>
  <li>
    <strong>1-pages</strong>

<ul>
  <li>
    <a href="/docs/0-pages/4-pages/1-pages/1-first/">
  1-first
</a>


  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

  </li>
  <li>
    <a href="/docs/1-about-docs/">
  1-about-docs
    (current)
</a>


  </li>
</ul>

        </li>      </ul>
    </nav>
  </body>
</html>',
    data: {
      basename: "1-about-docs",
      children: "",
      content: "",
      date: [],
      layout: "main.vto",
      mergedKeys: [
        "tags",
      ],
      nav: [],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/docs/1-about-docs/",
    },
    src: {
      ext: ".md",
      path: "/docs/1-about-docs",
      remote: undefined,
    },
  },
  {
    content: '<html>
  <head>
    <title></title>
  </head>

  <body>
      <a href="/">Previous </a>
      <a href="/docs/0-pages/">Next 0-pages</a>
    <hr>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        <li><a href="/"></a></li>
        <li><a href="/docs/">docs</a></li>
      </ul>
    </nav>

    <h1>docs</h1>

    <nav>
      <ul>        <li>
          <a href="/docs/">
  docs
    (current)
</a>

<ul>
  <li>
    <a href="/docs/0-pages/">
  0-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/1-first/">
  1-first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/2-second/">
  2-second
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/">
  3-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/3-pages/1.first/">
  1.first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/2.second/">
  2.second
</a>


  </li>
</ul>

  </li>
  <li>
    <strong>4-pages</strong>

<ul>
  <li>
    <strong>1-pages</strong>

<ul>
  <li>
    <a href="/docs/0-pages/4-pages/1-pages/1-first/">
  1-first
</a>


  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

  </li>
  <li>
    <a href="/docs/1-about-docs/">
  1-about-docs
</a>


  </li>
</ul>

        </li>      </ul>
    </nav>
  </body>
</html>',
    data: {
      basename: "docs",
      children: "",
      content: "",
      date: [],
      layout: "main.vto",
      mergedKeys: [
        "tags",
      ],
      nav: [],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/docs/",
    },
    src: {
      ext: ".md",
      path: "/docs",
      remote: undefined,
    },
  },
  {
    content: '<html>
  <head>
    <title></title>
  </head>

  <body>
      <a href="/docs/">Next docs</a>
    <hr>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        <li><a href="/"></a></li>
      </ul>
    </nav>

    <h1></h1>

    <nav>
      <ul>        <li>
          <a href="/docs/">
  docs
</a>

<ul>
  <li>
    <a href="/docs/0-pages/">
  0-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/1-first/">
  1-first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/2-second/">
  2-second
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/">
  3-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/3-pages/1.first/">
  1.first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/2.second/">
  2.second
</a>


  </li>
</ul>

  </li>
  <li>
    <strong>4-pages</strong>

<ul>
  <li>
    <strong>1-pages</strong>

<ul>
  <li>
    <a href="/docs/0-pages/4-pages/1-pages/1-first/">
  1-first
</a>


  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

  </li>
  <li>
    <a href="/docs/1-about-docs/">
  1-about-docs
</a>


  </li>
</ul>

        </li>      </ul>
    </nav>
  </body>
</html>',
    data: {
      basename: "",
      children: "",
      content: "",
      date: [],
      layout: "main.vto",
      mergedKeys: [
        "tags",
      ],
      nav: [],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/",
    },
    src: {
      ext: ".vto",
      path: "/index",
      remote: undefined,
    },
  },
]
`;

snapshot[`nav plugin with pretty urls disabled 1`] = `
{
  formats: [
    {
      engines: 0,
      ext: ".page.toml",
      isPage: true,
      loader: [AsyncFunction: toml],
    },
    {
      engines: 1,
      ext: ".page.ts",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".page.js",
      isPage: true,
      loader: [AsyncFunction: module],
    },
    {
      engines: 0,
      ext: ".page.jsonc",
      isPage: true,
      loader: [AsyncFunction: json],
    },
    {
      engines: 0,
      ext: ".page.json",
      isPage: true,
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".json",
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: 0,
      ext: ".jsonc",
      loader: [AsyncFunction: json],
    },
    {
      engines: 1,
      ext: ".md",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".markdown",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
      loader: [AsyncFunction: module],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".vento",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".vto",
      isPage: true,
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: toml],
      engines: 0,
      ext: ".toml",
      loader: [AsyncFunction: toml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yaml",
      isPage: true,
      loader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: 0,
      ext: ".yml",
      isPage: true,
      loader: [AsyncFunction: yaml],
    },
  ],
  src: [
    "/",
    "/_data.yml",
    "/_includes",
    "/_includes/main.vto",
    "/_includes/step.vto",
    "/docs",
    "/docs.md",
    "/docs/0-pages",
    "/docs/0-pages/1-first.md",
    "/docs/0-pages/2-second.md",
    "/docs/0-pages/3-pages",
    "/docs/0-pages/3-pages.md",
    "/docs/0-pages/3-pages/1.first.md",
    "/docs/0-pages/3-pages/2.second.md",
    "/docs/0-pages/4-pages",
    "/docs/0-pages/4-pages/1-pages",
    "/docs/0-pages/4-pages/1-pages/1-first.md",
    "/docs/0-pages/index.md",
    "/docs/1-about-docs.md",
    "/index.vto",
  ],
}
`;

snapshot[`nav plugin with pretty urls disabled 2`] = `[]`;

snapshot[`nav plugin with pretty urls disabled 3`] = `
[
  {
    content: '<html>
  <head>
    <title></title>
  </head>

  <body>
      <a href="/index.html">Previous index</a>
      <a href="/docs/1-about-docs.html">Next 1-about-docs</a>
    <hr>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        <li><a href="/index.html">index</a></li>
        <li><a href="/docs.html">docs</a></li>
      </ul>
    </nav>

    <h1>docs</h1>

    <nav>
      <ul>        <li>
          <a href="/docs.html">
  docs
    (current)
</a>

<ul>
  <li>
    <a href="/docs/1-about-docs.html">
  1-about-docs
</a>


  </li>
  <li>
    <a href="/docs/0-pages/index.html">
  index
</a>

<ul>
  <li>
    <a href="/docs/0-pages/1-first.html">
  1-first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/2-second.html">
  2-second
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages.html">
  3-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/3-pages/1.first.html">
  1.first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/2.second.html">
  2.second
</a>


  </li>
</ul>

  </li>
  <li>
    <strong>4-pages</strong>

<ul>
  <li>
    <strong>1-pages</strong>

<ul>
  <li>
    <a href="/docs/0-pages/4-pages/1-pages/1-first.html">
  1-first
</a>


  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

        </li>      </ul>
    </nav>
  </body>
</html>',
    data: {
      basename: "docs",
      children: "",
      content: "",
      date: [],
      layout: "main.vto",
      mergedKeys: [
        "tags",
      ],
      nav: [],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/docs.html",
    },
    src: {
      ext: ".md",
      path: "/docs",
      remote: undefined,
    },
  },
  {
    content: '<html>
  <head>
    <title></title>
  </head>

  <body>
      <a href="/docs/0-pages/index.html">Previous index</a>
      <a href="/docs/0-pages/2-second.html">Next 2-second</a>
    <hr>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        <li><a href="/index.html">index</a></li>
        <li><a href="/docs.html">docs</a></li>
        <li><a href="/docs/0-pages/index.html">index</a></li>
        <li><a href="/docs/0-pages/1-first.html">1-first</a></li>
      </ul>
    </nav>

    <h1>1-first</h1>

    <nav>
      <ul>        <li>
          <a href="/docs.html">
  docs
</a>

<ul>
  <li>
    <a href="/docs/1-about-docs.html">
  1-about-docs
</a>


  </li>
  <li>
    <a href="/docs/0-pages/index.html">
  index
</a>

<ul>
  <li>
    <a href="/docs/0-pages/1-first.html">
  1-first
    (current)
</a>


  </li>
  <li>
    <a href="/docs/0-pages/2-second.html">
  2-second
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages.html">
  3-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/3-pages/1.first.html">
  1.first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/2.second.html">
  2.second
</a>


  </li>
</ul>

  </li>
  <li>
    <strong>4-pages</strong>

<ul>
  <li>
    <strong>1-pages</strong>

<ul>
  <li>
    <a href="/docs/0-pages/4-pages/1-pages/1-first.html">
  1-first
</a>


  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

        </li>      </ul>
    </nav>
  </body>
</html>',
    data: {
      basename: "1-first",
      children: "",
      content: "",
      date: [],
      layout: "main.vto",
      mergedKeys: [
        "tags",
      ],
      nav: [],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/docs/0-pages/1-first.html",
    },
    src: {
      ext: ".md",
      path: "/docs/0-pages/1-first",
      remote: undefined,
    },
  },
  {
    content: '<html>
  <head>
    <title></title>
  </head>

  <body>
      <a href="/docs/0-pages/1-first.html">Previous 1-first</a>
      <a href="/docs/0-pages/3-pages.html">Next 3-pages</a>
    <hr>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        <li><a href="/index.html">index</a></li>
        <li><a href="/docs.html">docs</a></li>
        <li><a href="/docs/0-pages/index.html">index</a></li>
        <li><a href="/docs/0-pages/2-second.html">2-second</a></li>
      </ul>
    </nav>

    <h1>2-second</h1>

    <nav>
      <ul>        <li>
          <a href="/docs.html">
  docs
</a>

<ul>
  <li>
    <a href="/docs/1-about-docs.html">
  1-about-docs
</a>


  </li>
  <li>
    <a href="/docs/0-pages/index.html">
  index
</a>

<ul>
  <li>
    <a href="/docs/0-pages/1-first.html">
  1-first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/2-second.html">
  2-second
    (current)
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages.html">
  3-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/3-pages/1.first.html">
  1.first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/2.second.html">
  2.second
</a>


  </li>
</ul>

  </li>
  <li>
    <strong>4-pages</strong>

<ul>
  <li>
    <strong>1-pages</strong>

<ul>
  <li>
    <a href="/docs/0-pages/4-pages/1-pages/1-first.html">
  1-first
</a>


  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

        </li>      </ul>
    </nav>
  </body>
</html>',
    data: {
      basename: "2-second",
      children: "",
      content: "",
      date: [],
      layout: "main.vto",
      mergedKeys: [
        "tags",
      ],
      nav: [],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/docs/0-pages/2-second.html",
    },
    src: {
      ext: ".md",
      path: "/docs/0-pages/2-second",
      remote: undefined,
    },
  },
  {
    content: '<html>
  <head>
    <title></title>
  </head>

  <body>
      <a href="/docs/0-pages/2-second.html">Previous 2-second</a>
      <a href="/docs/0-pages/3-pages/1.first.html">Next 1.first</a>
    <hr>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        <li><a href="/index.html">index</a></li>
        <li><a href="/docs.html">docs</a></li>
        <li><a href="/docs/0-pages/index.html">index</a></li>
        <li><a href="/docs/0-pages/3-pages.html">3-pages</a></li>
      </ul>
    </nav>

    <h1>3-pages</h1>

    <nav>
      <ul>        <li>
          <a href="/docs.html">
  docs
</a>

<ul>
  <li>
    <a href="/docs/1-about-docs.html">
  1-about-docs
</a>


  </li>
  <li>
    <a href="/docs/0-pages/index.html">
  index
</a>

<ul>
  <li>
    <a href="/docs/0-pages/1-first.html">
  1-first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/2-second.html">
  2-second
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages.html">
  3-pages
    (current)
</a>

<ul>
  <li>
    <a href="/docs/0-pages/3-pages/1.first.html">
  1.first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/2.second.html">
  2.second
</a>


  </li>
</ul>

  </li>
  <li>
    <strong>4-pages</strong>

<ul>
  <li>
    <strong>1-pages</strong>

<ul>
  <li>
    <a href="/docs/0-pages/4-pages/1-pages/1-first.html">
  1-first
</a>


  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

        </li>      </ul>
    </nav>
  </body>
</html>',
    data: {
      basename: "3-pages",
      children: "",
      content: "",
      date: [],
      layout: "main.vto",
      mergedKeys: [
        "tags",
      ],
      nav: [],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/docs/0-pages/3-pages.html",
    },
    src: {
      ext: ".md",
      path: "/docs/0-pages/3-pages",
      remote: undefined,
    },
  },
  {
    content: '<html>
  <head>
    <title></title>
  </head>

  <body>
      <a href="/docs/0-pages/3-pages.html">Previous 3-pages</a>
      <a href="/docs/0-pages/3-pages/2.second.html">Next 2.second</a>
    <hr>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        <li><a href="/index.html">index</a></li>
        <li><a href="/docs.html">docs</a></li>
        <li><a href="/docs/0-pages/index.html">index</a></li>
        <li><a href="/docs/0-pages/3-pages.html">3-pages</a></li>
        <li><a href="/docs/0-pages/3-pages/1.first.html">1.first</a></li>
      </ul>
    </nav>

    <h1>1.first</h1>

    <nav>
      <ul>        <li>
          <a href="/docs.html">
  docs
</a>

<ul>
  <li>
    <a href="/docs/1-about-docs.html">
  1-about-docs
</a>


  </li>
  <li>
    <a href="/docs/0-pages/index.html">
  index
</a>

<ul>
  <li>
    <a href="/docs/0-pages/1-first.html">
  1-first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/2-second.html">
  2-second
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages.html">
  3-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/3-pages/1.first.html">
  1.first
    (current)
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/2.second.html">
  2.second
</a>


  </li>
</ul>

  </li>
  <li>
    <strong>4-pages</strong>

<ul>
  <li>
    <strong>1-pages</strong>

<ul>
  <li>
    <a href="/docs/0-pages/4-pages/1-pages/1-first.html">
  1-first
</a>


  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

        </li>      </ul>
    </nav>
  </body>
</html>',
    data: {
      basename: "1.first",
      children: "",
      content: "",
      date: [],
      layout: "main.vto",
      mergedKeys: [
        "tags",
      ],
      nav: [],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/docs/0-pages/3-pages/1.first.html",
    },
    src: {
      ext: ".md",
      path: "/docs/0-pages/3-pages/1.first",
      remote: undefined,
    },
  },
  {
    content: '<html>
  <head>
    <title></title>
  </head>

  <body>
      <a href="/docs/0-pages/3-pages/1.first.html">Previous 1.first</a>
      <a href="/docs/0-pages/4-pages/1-pages/1-first.html">Next 1-first</a>
    <hr>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        <li><a href="/index.html">index</a></li>
        <li><a href="/docs.html">docs</a></li>
        <li><a href="/docs/0-pages/index.html">index</a></li>
        <li><a href="/docs/0-pages/3-pages.html">3-pages</a></li>
        <li><a href="/docs/0-pages/3-pages/2.second.html">2.second</a></li>
      </ul>
    </nav>

    <h1>2.second</h1>

    <nav>
      <ul>        <li>
          <a href="/docs.html">
  docs
</a>

<ul>
  <li>
    <a href="/docs/1-about-docs.html">
  1-about-docs
</a>


  </li>
  <li>
    <a href="/docs/0-pages/index.html">
  index
</a>

<ul>
  <li>
    <a href="/docs/0-pages/1-first.html">
  1-first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/2-second.html">
  2-second
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages.html">
  3-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/3-pages/1.first.html">
  1.first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/2.second.html">
  2.second
    (current)
</a>


  </li>
</ul>

  </li>
  <li>
    <strong>4-pages</strong>

<ul>
  <li>
    <strong>1-pages</strong>

<ul>
  <li>
    <a href="/docs/0-pages/4-pages/1-pages/1-first.html">
  1-first
</a>


  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

        </li>      </ul>
    </nav>
  </body>
</html>',
    data: {
      basename: "2.second",
      children: "",
      content: "",
      date: [],
      layout: "main.vto",
      mergedKeys: [
        "tags",
      ],
      nav: [],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/docs/0-pages/3-pages/2.second.html",
    },
    src: {
      ext: ".md",
      path: "/docs/0-pages/3-pages/2.second",
      remote: undefined,
    },
  },
  {
    content: '<html>
  <head>
    <title></title>
  </head>

  <body>
      <a href="/docs/0-pages/3-pages/2.second.html">Previous 2.second</a>
    <hr>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        <li><a href="/index.html">index</a></li>
        <li><a href="/docs.html">docs</a></li>
        <li><a href="/docs/0-pages/index.html">index</a></li>
        <li><a href="">4-pages</a></li>
        <li><a href="">1-pages</a></li>
        <li><a href="/docs/0-pages/4-pages/1-pages/1-first.html">1-first</a></li>
      </ul>
    </nav>

    <h1>1-first</h1>

    <nav>
      <ul>        <li>
          <a href="/docs.html">
  docs
</a>

<ul>
  <li>
    <a href="/docs/1-about-docs.html">
  1-about-docs
</a>


  </li>
  <li>
    <a href="/docs/0-pages/index.html">
  index
</a>

<ul>
  <li>
    <a href="/docs/0-pages/1-first.html">
  1-first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/2-second.html">
  2-second
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages.html">
  3-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/3-pages/1.first.html">
  1.first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/2.second.html">
  2.second
</a>


  </li>
</ul>

  </li>
  <li>
    <strong>4-pages</strong>

<ul>
  <li>
    <strong>1-pages</strong>

<ul>
  <li>
    <a href="/docs/0-pages/4-pages/1-pages/1-first.html">
  1-first
    (current)
</a>


  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

        </li>      </ul>
    </nav>
  </body>
</html>',
    data: {
      basename: "1-first",
      children: "",
      content: "",
      date: [],
      layout: "main.vto",
      mergedKeys: [
        "tags",
      ],
      nav: [],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/docs/0-pages/4-pages/1-pages/1-first.html",
    },
    src: {
      ext: ".md",
      path: "/docs/0-pages/4-pages/1-pages/1-first",
      remote: undefined,
    },
  },
  {
    content: '<html>
  <head>
    <title></title>
  </head>

  <body>
      <a href="/docs/1-about-docs.html">Previous 1-about-docs</a>
      <a href="/docs/0-pages/1-first.html">Next 1-first</a>
    <hr>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        <li><a href="/index.html">index</a></li>
        <li><a href="/docs.html">docs</a></li>
        <li><a href="/docs/0-pages/index.html">index</a></li>
      </ul>
    </nav>

    <h1>index</h1>

    <nav>
      <ul>        <li>
          <a href="/docs.html">
  docs
</a>

<ul>
  <li>
    <a href="/docs/1-about-docs.html">
  1-about-docs
</a>


  </li>
  <li>
    <a href="/docs/0-pages/index.html">
  index
    (current)
</a>

<ul>
  <li>
    <a href="/docs/0-pages/1-first.html">
  1-first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/2-second.html">
  2-second
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages.html">
  3-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/3-pages/1.first.html">
  1.first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/2.second.html">
  2.second
</a>


  </li>
</ul>

  </li>
  <li>
    <strong>4-pages</strong>

<ul>
  <li>
    <strong>1-pages</strong>

<ul>
  <li>
    <a href="/docs/0-pages/4-pages/1-pages/1-first.html">
  1-first
</a>


  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

        </li>      </ul>
    </nav>
  </body>
</html>',
    data: {
      basename: "index",
      children: "",
      content: "",
      date: [],
      layout: "main.vto",
      mergedKeys: [
        "tags",
      ],
      nav: [],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/docs/0-pages/index.html",
    },
    src: {
      ext: ".md",
      path: "/docs/0-pages/index",
      remote: undefined,
    },
  },
  {
    content: '<html>
  <head>
    <title></title>
  </head>

  <body>
      <a href="/docs.html">Previous docs</a>
      <a href="/docs/0-pages/index.html">Next index</a>
    <hr>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        <li><a href="/index.html">index</a></li>
        <li><a href="/docs.html">docs</a></li>
        <li><a href="/docs/1-about-docs.html">1-about-docs</a></li>
      </ul>
    </nav>

    <h1>1-about-docs</h1>

    <nav>
      <ul>        <li>
          <a href="/docs.html">
  docs
</a>

<ul>
  <li>
    <a href="/docs/1-about-docs.html">
  1-about-docs
    (current)
</a>


  </li>
  <li>
    <a href="/docs/0-pages/index.html">
  index
</a>

<ul>
  <li>
    <a href="/docs/0-pages/1-first.html">
  1-first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/2-second.html">
  2-second
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages.html">
  3-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/3-pages/1.first.html">
  1.first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/2.second.html">
  2.second
</a>


  </li>
</ul>

  </li>
  <li>
    <strong>4-pages</strong>

<ul>
  <li>
    <strong>1-pages</strong>

<ul>
  <li>
    <a href="/docs/0-pages/4-pages/1-pages/1-first.html">
  1-first
</a>


  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

        </li>      </ul>
    </nav>
  </body>
</html>',
    data: {
      basename: "1-about-docs",
      children: "",
      content: "",
      date: [],
      layout: "main.vto",
      mergedKeys: [
        "tags",
      ],
      nav: [],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/docs/1-about-docs.html",
    },
    src: {
      ext: ".md",
      path: "/docs/1-about-docs",
      remote: undefined,
    },
  },
  {
    content: '<html>
  <head>
    <title></title>
  </head>

  <body>
      <a href="/docs.html">Next docs</a>
    <hr>
    <nav>
      <ul style="display: flex; list-style: none; gap: 1em; padding: 0;">
        <li><a href="/index.html">index</a></li>
      </ul>
    </nav>

    <h1>index</h1>

    <nav>
      <ul>        <li>
          <a href="/docs.html">
  docs
</a>

<ul>
  <li>
    <a href="/docs/1-about-docs.html">
  1-about-docs
</a>


  </li>
  <li>
    <a href="/docs/0-pages/index.html">
  index
</a>

<ul>
  <li>
    <a href="/docs/0-pages/1-first.html">
  1-first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/2-second.html">
  2-second
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages.html">
  3-pages
</a>

<ul>
  <li>
    <a href="/docs/0-pages/3-pages/1.first.html">
  1.first
</a>


  </li>
  <li>
    <a href="/docs/0-pages/3-pages/2.second.html">
  2.second
</a>


  </li>
</ul>

  </li>
  <li>
    <strong>4-pages</strong>

<ul>
  <li>
    <strong>1-pages</strong>

<ul>
  <li>
    <a href="/docs/0-pages/4-pages/1-pages/1-first.html">
  1-first
</a>


  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

  </li>
</ul>

        </li>      </ul>
    </nav>
  </body>
</html>',
    data: {
      basename: "index",
      children: "",
      content: "",
      date: [],
      layout: "main.vto",
      mergedKeys: [
        "tags",
      ],
      nav: [],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      url: "/index.html",
    },
    src: {
      ext: ".vto",
      path: "/index",
      remote: undefined,
    },
  },
]
`;
